# data-engineering-test

./: README.md  pyproject.toml
1-Extract/: config.json
2-Load/: load_data.py
2-Load/Data/: orders.parquet  sales_owners.parquet
2-Load/DataBase/: Dockerfile  docker-compose.yml
3-Transform/: Dockerfile  docker-compose.yml
3-Transform/dbt_project/: dbt_project.yml
ifco/: pyproject.toml
ifco/1-Extract/: data_extraction.py
ifco/2-Load/: load_data.py
ifco/2-Load/Data/: invoices.parquet  orders.parquet  sales_owners.parquet
ifco/2-Load/DataBase/: Dockerfile  docker-compose.yml
ifco/2-Load/DataBaseCredentials/: credentials.json
ifco/3-Transform/: Dockerfile  docker-compose.yml
ifco/3-Transform/dbt_project/: dbt_project.yml
ifco/3-Transform/dbt_project/models/marts/business_intelligence/: mrt_business_intelligence.yml  mrt_business_intelligence_sch_test_1.sql  mrt_business_intelligence_test_2.sql
ifco/3-Transform/dbt_project/models/staging/finance_erp/: src_finance_erp_sch.yml  stg_finance_erp_sch_invoices.sql  stg_finance_erp_sch_orders.sql  stg_finance_erp_sch_sales_owners.sql  stg_public_sch.yml
ifco/3-Transform/dbt_project/profiles/: profiles.yml
ifco/3-Transform/ifco_business_intelligence/models/staging/finance_erp/: src_finance_erp_sch.yml  stg_finance_erp_sch_orders.sql  stg_finance_erp_sch_sales_owners.sql
ifco/3-Transform/ifco_business_intelligence/profiles/: profiles.yml
ifco/Extraction/: data_extraction.py  exploration.ipynb
ifco/ifco/: exploration.ipynb
ifco/ifco_business_intelligence/: dbt_project.yml
(+8 files in other folders)
