[tool.poetry]
name = "ifco"
version = "0.1.0"
description = ""
authors = ["Camila Oliveira <camila.oliveira.cardoso@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.3"
polars = "^1.12.0"
pandas = "^2.2.3"
logging = "^0.4.9.6"
pyarrow = "^18.0.0"
dbt-postgres = "1.3.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
